# timelines

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  TODO.wiki  vcpkg.json
.github/workflows/: tests.yml
cmake/: bootstrap_vcpkg.cmake  vcpkg.cmake
examples/: example100.csv  example137.csv  example50.csv  example_big.csv  example_future.csv  example_interconnected.csv  example_prehistoric.csv  example_scientists.csv  example_scientists_raw.csv
src/: app.cpp  app.hpp  backend.hpp  calendars.cpp  calendars.hpp  core.cpp  core.hpp  entities.cpp  entities.hpp  errors.hpp  files.hpp  geometry.hpp  headers.hpp  main.cpp  rendering.cpp  rendering.hpp  requests.cpp  requests.hpp  spec.hpp  time.cpp  time.hpp  time_abstractions.hpp  types.hpp  utilities.cpp  utilities.hpp
src/details/: events.hpp  graphics.hpp
src/sdl/: events.cpp  events.hpp  graphics.cpp  graphics.hpp
src/ui/: base.hpp  components.cpp  components.hpp
tests/: CMakeLists.txt  timelines_test.cpp
timelines/: calendars.cpp  calendars.hpp  entities.cpp  entities.hpp  headers.hpp  main.cpp  rendering.hpp  resource_mgr.hpp  spec.hpp  time_abstractions.hpp
timelines/details/: events.hpp  graphics.hpp  utilities.cpp  utilities.hpp
tools/: duplicates.py
